--- a/core/Dockerfile.template
+++ b/core/Dockerfile.template
@@ -1,4 +1,6 @@
-FROM balenalib/%%BALENA_MACHINE_NAME%%-node:9-stretch-build AS npm-install
+FROM balenalib/%%BALENA_MACHINE_NAME%%-node:10-stretch-build AS npm-install
+
+RUN install_packages unzip
 
 ENV npm_config_unsafe_perm=true
 
@@ -6,21 +8,25 @@ WORKDIR /tmp/node
 
 COPY package.json .
 
+RUN wget https://github.com/balena-io/balena-cli/releases/download/v11.7.0/balena-cli-v11.7.0-linux-x64-standalone.zip && unzip balena-cli-v11.7.0-linux-x64-standalone.zip
+
 RUN npm install
 
-FROM balenalib/%%BALENA_MACHINE_NAME%%-node:9-stretch-build
+FROM balenalib/%%BALENA_MACHINE_NAME%%-node:10-stretch-build
 
 ENV UDEV=1
 
 ENV npm_config_unsafe_perm=true
 
-RUN install_packages jq git vim rsync python
+RUN install_packages jq git vim rsync
 
 WORKDIR /usr/app
 
-RUN npm install balena-cli -g --production --unsafe-perm
 
 COPY --from=npm-install /tmp/node ./
+
+# Give global access to balena-cli
+RUN ln -sf $(pwd)/balena-cli/balena /usr/local/balena
 
 COPY contracts contracts
 COPY .eslintrc.json ./
