--- a/core/package.json
+++ b/core/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/balena-io/balena-tests",
   "dependencies": {
+    "any-promise": "^1.3.0",
     "ajv": "^6.5.0",
     "ajv-semver": "git+https://github.com/balena-io-modules/ajv-semver.git#resin-semver",
     "async-mutex": "^0.1.3",
@@ -32,22 +33,18 @@
     "bluebird-retry": "^0.11.0",
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
-    "firmata": "^0.19.1",
     "fs-extra": "^3.0.1",
     "indent-string": "^3.2.0",
     "inquirer": "^5.1.0",
     "lodash": "^4.17.10",
     "mz": "^2.7.0",
     "node-ssh": "^5.1.2",
-    "node-zip": "^1.1.1",
     "npm": "^6.5.0",
     "pensieve-sdk": "^1.0.0",
-    "randomstring": "^1.1.5",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "resin-cli-visuals": "^1.4.0",
     "resin-image-fs": "^5.0.8",
-    "resin-semver": "^1.4.0",
     "simple-git": "^1.85.0",
     "ssh-keygen": "^0.4.1",
     "string-to-stream": "^1.1.1",
