--- a/core/package.json
+++ b/core/package.json
@@ -23,9 +23,9 @@
   },
   "homepage": "https://github.com/balena-io/balena-tests",
   "dependencies": {
-    "any-promise": "^1.3.0",
     "ajv": "^6.5.0",
     "ajv-semver": "git+https://github.com/balena-io-modules/ajv-semver.git#resin-semver",
+    "any-promise": "^1.3.0",
     "async-mutex": "^0.1.3",
     "balena-sdk": "^11.0.0",
     "balena-sync": "^10.0.0",
@@ -37,6 +37,7 @@
     "indent-string": "^3.2.0",
     "inquirer": "^5.1.0",
     "lodash": "^4.17.10",
+    "md5-file": "^4.0.0",
     "mz": "^2.7.0",
     "node-ssh": "^5.1.2",
     "npm": "^6.5.0",
