--- a/worker/Dockerfile.template
+++ b/worker/Dockerfile.template
@@ -51,6 +51,8 @@ RUN install_packages \
     libusb-dev libdbus-1-dev \
     qemu-system-x86 libvirt-daemon-system bridge-utils iproute dnsmasq iptables ebtables
 
+# Disable all cgroup controls as we do not use them
+RUN sed -i 's/^#cgroup_controllers =.*/cgroup_controllers = []/g' /etc/libvirt/qemu.conf
 
 COPY --from=go-build /go/bin/glider /usr/local/bin
 
