--- a/worker/package.json
+++ b/worker/package.json
@@ -45,11 +45,13 @@
     "etcher-sdk": "^1.3.1",
     "express": "^4.16.4",
     "firmata": "^2.0.0",
+    "fs-extra": "^8.1.0",
     "libvirt": "^1.2.1",
     "lodash": "^4.17.11",
     "multicast-dns": "git+https://github.com/resin-io-modules/multicast-dns#listen-on-all-interfaces",
     "mz": "^2.7.0",
     "resin-cli-visuals": "^1.4.2",
+    "tar": "^4.4.10",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
@@ -59,12 +61,14 @@
     "@types/chai-http": "^3.0.5",
     "@types/express": "^4.16.1",
     "@types/firmata": "^0.19.0",
+    "@types/fs-extra": "^8.0.0",
     "@types/lodash": "^4.14.120",
     "@types/mocha": "^5.2.5",
     "@types/mz": "0.0.32",
     "@types/node": "^10.12.18",
     "@types/request-promise": "^4.1.42",
     "@types/sinon": "^7.0.11",
+    "@types/tar": "^4.0.3",
     "@types/uuid": "^3.4.4",
     "@types/ws": "^6.0.1",
     "chai": "^4.2.0",
