--- a/suites/os/package.json
+++ b/suites/os/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "bluebird": "^3.5.3",
     "fs-extra": "^8.1.0",
+    "jpeg-js": "^0.3.6",
     "lodash": "^4.17.11",
     "mz": "^2.7.0",
-    "request-promise": "^4.2.4"
+    "request-promise": "^4.2.4",
+    "tar-stream": "^2.1.0"
   }
 }
