--- a/compose/balena.yml
+++ b/compose/balena.yml
@@ -9,6 +9,8 @@ services:
     network_mode: 'host'
     volumes:
       - 'core-storage:/data'
+   labels:
+      share: 'core-storage'
   worker:
     privileged: true
     build: ./worker
@@ -19,3 +21,4 @@ services:
       - 'worker-storage:/data'
     labels:
       io.balena.features.dbus: '1'
+      io.balena.features.balena-socket: '1'
