--- a/suites/release/package.json
+++ b/suites/release/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "bluebird": "^3.5.3",
+    "fs-extra": "^8.1.0",
     "lodash": "^4.17.11",
     "mz": "^2.7.0",
+    "request": "^2.88.0",
     "request-promise": "^4.2.4"
   }
 }
