--- a/core/package.json
+++ b/core/package.json
@@ -53,8 +53,7 @@
     "tap": "^13.1.1",
     "tap-parser": "^7.0.0",
     "tar-fs": "^2.0.0",
-    "unzip": "^0.1.11",
-    "websocket-stream": "^5.5.0"
+    "unzip": "^0.1.11"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
