Handle service config with real configuration files
Signed-off-by: Theodor Gherzan <theodor@balena.io>

--- a/worker/Dockerfile.template
+++ b/worker/Dockerfile.template
@@ -64,6 +64,7 @@ COPY firmware/SDcardSwitch.ino.hex .
 
 WORKDIR /usr/app
 
+COPY config config
 COPY entry.sh .
 
 COPY --from=node-build /tmp/node/package.json .
