--- a/core/package.json
+++ b/core/package.json
@@ -31,6 +31,7 @@
     "balena-sync": "^10.0.0",
     "bluebird": "^3.5.1",
     "bluebird-retry": "^0.11.0",
+    "config": "^3.2.2",
     "dockerode": "^2.5.8",
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
