--- a/worker/package.json
+++ b/worker/package.json
@@ -36,10 +36,12 @@
   "homepage": "https://github.com/balena-io/leviathan-worker#readme",
   "dependencies": {
     "@types/bluebird": "^3.5.25",
+    "@types/config": "0.0.34",
     "async-mutex": "^0.1.3",
     "bluebird": "^3.5.3",
     "bluebird-retry": "^0.11.0",
     "body-parser": "^1.18.3",
+    "config": "^3.2.2",
     "dbus-next": "^0.7.1",
     "drivelist": "^8.0.6",
     "etcher-sdk": "^1.3.1",
