Remove the need to pass CI as we can determine the style of output on the tty properties of a stream
Signed-off-by: Theodor Gherzan <theodor@balena.io>

--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "ajv": "^6.10.2",
     "balena-sdk": "^12.10.0",
+    "blessed": "^0.1.81",
     "bluebird": "^3.5.3",
     "config": "^3.2.2",
     "fs-extra": "^8.1.0",
@@ -35,7 +36,7 @@
     "readable-stream": "^3.4.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
-    "resin-cli-visuals": "^1.4.3",
+    "resin-cli-visuals": "balena-io-modules/resin-cli-visuals#stream",
     "tar-fs": "^2.0.0",
     "tar-stream": "^2.1.0",
     "ws": "^7.1.2",
