Standardise common parts of our components and move as a top level npm package
Signed-off-by: Theodor Gherzan <theodor@balena.io>

--- a/core/.lintstagedrc
+++ b/core/.lintstagedrc
@@ -1,7 +1,7 @@
 {
-	"*.ts": [
+	"*.js": [
 		"prettier --config ./node_modules/resin-lint/config/.prettierrc --write",
-		"resin-lint --typescript --no-prettier lib/",
+		"eslint lib tests",
 		"git add"
 	]
 }
