--- a/client/package.json
+++ b/client/package.json
@@ -1,46 +1,56 @@
 {
-  "name": "client",
-  "version": "0.0.1",
-  "description": "Simple client to schedule a single Leviathan run",
-  "main": "lib/index.js",
-  "directories": {
-    "bin": "bin"
-  },
-  "bin": {
-    "single-client": "bin/single-client.js",
-    "multi-client": "bin/multi-client.js"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/node": "^7.6.1",
-    "@babel/preset-env": "^7.6.0"
-  },
-  "scripts": {
-    "single-start": "node bin/single-client.js",
-    "single-start-es5": "babel-node --presets @babel/env bin/single-client.js",
-    "multi-start": "node bin/multi-client.js",
-    "multi-start-es5": "babel-node --presets @babel/env bin/multi-client.js"
-  },
-  "author": "Theodor Gherzan",
-  "license": "ISC",
-  "dependencies": {
-    "ajv": "^6.10.2",
-    "balena-sdk": "^12.10.0",
-    "blessed": "^0.1.81",
-    "bluebird": "^3.5.3",
-    "config": "^3.2.2",
-    "fs-extra": "^8.1.0",
-    "lodash": "^4.17.11",
-    "md5-file": "^4.0.0",
-    "mz": "^2.7.0",
-    "progress-stream": "^2.0.0",
-    "readable-stream": "^3.4.0",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "resin-cli-visuals": "balena-io-modules/resin-cli-visuals#stream",
-    "tar-fs": "^2.0.0",
-    "tar-stream": "^2.1.0",
-    "ws": "^7.1.2",
-    "yargs": "^13.2.4"
-  }
+	"main": "lib/index.js",
+	"directories": {
+		"bin": "bin"
+	},
+	"bin": {
+		"single-client": "bin/single-client.js",
+		"multi-client": "bin/multi-client.js"
+	},
+	"scripts": {
+		"prettify": "prettier --config ../.prettierrc --write \"{bin,lib,tests}/**/*.js\"",
+		"lint": "eslint bin lib tests",
+		"single-start": "node bin/single-client.js",
+		"single-start-es5": "babel-node --presets @babel/env bin/single-client.js",
+		"multi-start": "node bin/multi-client.js",
+		"multi-start-es5": "babel-node --presets @babel/env bin/multi-client.js"
+	},
+	"dependencies": {
+		"ajv": "^6.10.2",
+		"balena-sdk": "^12.10.0",
+		"blessed": "^0.1.81",
+		"bluebird": "^3.5.3",
+		"config": "^3.2.2",
+		"fs-extra": "^8.1.0",
+		"lodash": "^4.17.11",
+		"md5-file": "^4.0.0",
+		"mz": "^2.7.0",
+		"progress-stream": "^2.0.0",
+		"readable-stream": "^3.4.0",
+		"request": "^2.88.0",
+		"request-promise": "^4.2.4",
+		"resin-cli-visuals": "balena-io-modules/resin-cli-visuals#stream",
+		"tar-fs": "^2.0.0",
+		"tar-stream": "^2.1.0",
+		"ws": "^7.1.2",
+		"yargs": "^13.2.4"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.6.0",
+		"@babel/node": "^7.6.1",
+		"@babel/preset-env": "^7.6.0",
+		"eslint": "^4.19.1",
+		"eslint-config-prettier": "^4.0.0",
+		"eslint-config-standard": "^11.0.0",
+		"eslint-plugin-import": "^2.16.0",
+		"eslint-plugin-jsdoc": "^3.9.1",
+		"eslint-plugin-lodash": "^2.6.1",
+		"eslint-plugin-node": "^6.0.0",
+		"eslint-plugin-prettier": "^3.0.1",
+		"eslint-plugin-promise": "^3.6.0",
+		"eslint-plugin-standard": "^3.0.1",
+		"lint-staged": "^8.1.0",
+		"prettier": "^1.16.4",
+		"resin-lint": "^3.1.1"
+	}
 }
