--- a/core/package.json
+++ b/core/package.json
@@ -1,73 +1,56 @@
 {
-  "name": "balena-tests",
-  "version": "1.19.5",
-  "description": "Automated testing for balenaOS",
-  "private": true,
-  "scripts": {
-    "lint": "eslint lib scripts tests",
-    "test": "npm run lint",
-    "start": "node lib/main.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/balena-io/balena-tests.git"
-  },
-  "keywords": [
-    "balenOS",
-    "testing"
-  ],
-  "author": "balena Inc. <hello@balena.io>",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/balena-io/balena-tests/issues"
-  },
-  "homepage": "https://github.com/balena-io/balena-tests",
-  "dependencies": {
-    "ajv": "^6.5.0",
-    "ajv-semver": "git+https://github.com/balena-io-modules/ajv-semver.git#resin-semver",
-    "any-promise": "^1.3.0",
-    "async-mutex": "^0.1.3",
-    "balena-sdk": "^11.0.0",
-    "balena-sync": "^10.0.0",
-    "bluebird": "^3.5.1",
-    "bluebird-retry": "^0.11.0",
-    "config": "^3.2.2",
-    "dockerode": "^2.5.8",
-    "express": "^4.17.1",
-    "express-ws": "^4.0.0",
-    "fs-extra": "^3.0.1",
-    "indent-string": "^3.2.0",
-    "inquirer": "^5.1.0",
-    "lodash": "^4.17.10",
-    "md5-file": "^4.0.0",
-    "mz": "^2.7.0",
-    "node-ssh": "^5.1.2",
-    "npm": "^6.5.0",
-    "pensieve-sdk": "^1.0.0",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "resin-cli-visuals": "git+https://github.com/balena-io-modules/resin-cli-visuals#stream",
-    "resin-image-fs": "^5.0.8",
-    "simple-git": "^1.85.0",
-    "ssh-keygen": "^0.4.1",
-    "string-to-stream": "^1.1.1",
-    "tap": "^13.1.1",
-    "tap-parser": "^7.0.0",
-    "tar-fs": "^2.0.0",
-    "unzip": "^0.1.11",
-    "ws": "^7.1.2"
-  },
-  "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsdoc": "^3.9.1",
-    "eslint-plugin-lodash": "^2.6.1",
-    "eslint-plugin-node": "^6.0.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "prettier": "^1.16.4"
-  }
+	"scripts": {
+		"prettify": "prettier --config ../.prettierrc --write \"{lib,tests}/**/*.js\"",
+		"lint": "eslint lib tests",
+		"start": "node lib/main.js"
+	},
+	"dependencies": {
+		"ajv": "^6.5.0",
+		"ajv-semver": "git+https://github.com/balena-io-modules/ajv-semver.git#resin-semver",
+		"any-promise": "^1.3.0",
+		"async-mutex": "^0.1.3",
+		"balena-sdk": "^11.0.0",
+		"balena-sync": "^10.0.0",
+		"bluebird": "^3.5.1",
+		"bluebird-retry": "^0.11.0",
+		"config": "^3.2.2",
+		"dockerode": "^2.5.8",
+		"express": "^4.17.1",
+		"express-ws": "^4.0.0",
+		"fs-extra": "^3.0.1",
+		"indent-string": "^3.2.0",
+		"inquirer": "^5.1.0",
+		"lodash": "^4.17.10",
+		"md5-file": "^4.0.0",
+		"mz": "^2.7.0",
+		"node-ssh": "^5.1.2",
+		"npm": "^6.5.0",
+		"pensieve-sdk": "^1.0.0",
+		"request": "^2.88.0",
+		"request-promise": "^4.2.4",
+		"resin-cli-visuals": "git+https://github.com/balena-io-modules/resin-cli-visuals#stream",
+		"resin-image-fs": "^5.0.8",
+		"simple-git": "^1.85.0",
+		"ssh-keygen": "^0.4.1",
+		"string-to-stream": "^1.1.1",
+		"tap": "^13.1.1",
+		"tap-parser": "^7.0.0",
+		"tar-fs": "^2.0.0",
+		"unzip": "^0.1.11",
+		"ws": "^7.1.2"
+	},
+	"devDependencies": {
+		"eslint": "^4.19.1",
+		"eslint-config-prettier": "^4.0.0",
+		"eslint-config-standard": "^11.0.0",
+		"eslint-plugin-import": "^2.16.0",
+		"eslint-plugin-jsdoc": "^3.9.1",
+		"eslint-plugin-lodash": "^2.6.1",
+		"eslint-plugin-node": "^6.0.0",
+		"eslint-plugin-prettier": "^3.0.1",
+		"eslint-plugin-promise": "^3.6.0",
+		"eslint-plugin-standard": "^3.0.1",
+		"lint-staged": "^8.1.0",
+		"prettier": "^1.16.4"
+	}
 }
