--- a/core/.lintstagedrc
+++ b/core/.lintstagedrc
@@ -1,6 +1,6 @@
 {
 	"*.js": [
-		"prettier --config ./node_modules/resin-lint/config/.prettierrc --write",
+		"prettier --config ../.prettierrc --write",
 		"eslint lib tests",
 		"git add"
 	]
