--- a/suites/package.json
+++ b/suites/package.json
@@ -1,7 +1,7 @@
 {
 	"scripts": {
 		"prettify": "prettier --config ../.prettierrc --write \"{os,release}/**/*.js\"",
-		"lint": "eslint lib tests"
+		"lint": "eslint -c ../.eslintrc.* lib tests"
 	},
 	"devDependencies": {
 		"eslint": "^4.19.1",
