Clean package-lock leftovers
Signed-off-by: Theodor Gherzan <theodor@balena.io>

--- a/worker/Dockerfile.template
+++ b/worker/Dockerfile.template
@@ -6,18 +6,18 @@ WORKDIR /src
 
 RUN git clone https://github.com/PaulStoffregen/teensy_loader_cli.git -b 2.1
 RUN cd teensy_loader_cli && \
-    make && \
-    cd -
+  make && \
+  cd -
 
 RUN git clone https://github.com/balena-io-modules/usbsdmux.git
 RUN cd usbsdmux && \
-    virtualenv -p python3 venv && \
-    . venv/bin/activate && \
-    pip install pyinstaller && \
-    python setup.py install && \
-    pyinstaller --onefile venv/bin/usbsdmux-configure && \
-    deactivate && \
-    cd -
+  virtualenv -p python3 venv && \
+  . venv/bin/activate && \
+  pip install pyinstaller && \
+  python setup.py install && \
+  pyinstaller --onefile venv/bin/usbsdmux-configure && \
+  deactivate && \
+  cd -
 
 FROM balenalib/%%BALENA_MACHINE_NAME%%-golang:1.12.4-buster-build AS go-build
 
@@ -28,11 +28,10 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-node:10.14.0-buster-build AS node-build
 WORKDIR /tmp/node
 
 COPY package.json .
-COPY package-lock.json .
 
 RUN install_packages libdbus-1-dev libvirt-dev python
 
-RUN npm ci
+RUN npm i
 
 COPY tsconfig.json .
 COPY typings typings
@@ -48,9 +47,9 @@ ENV UDEV=1
 WORKDIR /usr/app/firmware
 
 RUN install_packages \
-    libusb-dev libdbus-1-dev \
-    gstreamer1.0-tools gstreamer1.0-plugins-base gstreamer1.0-plugins-bad gstreamer1.0-plugins-good \
-    qemu-system-x86 libvirt-daemon-system bridge-utils iproute2 dnsmasq iptables ebtables
+  libusb-dev libdbus-1-dev \
+  gstreamer1.0-tools gstreamer1.0-plugins-base gstreamer1.0-plugins-bad gstreamer1.0-plugins-good \
+  qemu-system-x86 libvirt-daemon-system bridge-utils iproute2 dnsmasq iptables ebtables
 
 # Disable all cgroup controls as we do not use them
 RUN sed -i 's/^#cgroup_controllers =.*/cgroup_controllers = []/g' /etc/libvirt/qemu.conf
