--- a/core/Dockerfile.template
+++ b/core/Dockerfile.template
@@ -5,9 +5,8 @@ ENV npm_config_unsafe_perm=true
 WORKDIR /tmp/node
 
 COPY package.json .
-COPY package-lock.json .
 
-RUN npm ci
+RUN npm i
 
 FROM balenalib/%%BALENA_MACHINE_NAME%%-node:10-buster-build
 
