Fix cli usage and other bugs
Signed-off-by: Theodor Gherzan <theodor@balena.io>

--- a/compose/balena.yml
+++ b/compose/balena.yml
@@ -11,6 +11,7 @@ services:
       - 'core-storage:/data'
     labels:
       share: 'core-storage'
+      io.balena.features.balena-socket: '1'
   worker:
     privileged: true
     build: ./worker
