--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"url": "https://github.com/balena-io/leviathan/issues"
 	},
 	"homepage": "https://github.com/balena-io/leviathan",
+	"private": true,
 	"devDependencies": {
 		"husky": "^1.3.1",
 		"lint-staged": "^8.1.0",
