--- a/worker/package.json
+++ b/worker/package.json
@@ -29,13 +29,15 @@
 		"express": "^4.16.4",
 		"firmata": "^2.0.0",
 		"fs-extra": "^8.1.0",
-		"libvirt": "^1.2.1",
 		"lodash": "^4.17.11",
 		"multicast-dns": "git+https://github.com/resin-io-modules/multicast-dns#listen-on-all-interfaces",
 		"mz": "^2.7.0",
 		"tar-fs": "^2.0.0",
 		"tar-stream": "^2.1.0",
 		"xml-js": "^1.6.11"
+	},
+	"optionalDependencies": {
+		"libvirt": "^1.2.1"
 	},
 	"devDependencies": {
 		"@types/bluebird-retry": "^0.11.2",
