--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,9 +6,9 @@
 		"node": true
 	},
 	"plugins": ["lodash", "jsdoc", "prettier"],
-	"extends": ["standard", "prettier"],
 	"parserOptions": {
-		"sourceType": "module"
+		"sourceType": "module",
+        "ecmaVersion": 8
 	},
 	"settings": {
 		"jsdoc": {
