--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "homepage": "https://github.com/balena-io/leviathan",
   "private": true,
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-jsdoc": "^20.0.5",
+    "eslint-plugin-lodash": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
     "prettier": "^1.16.4",
@@ -25,7 +29,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "for component in 'suites' 'worker' 'core' 'client'; do pushd $component && lint-staged && popd ; done"
+      "pre-commit": "lint-staged"
     }
   }
 }
