--- a/core/Dockerfile.template
+++ b/core/Dockerfile.template
@@ -4,9 +4,8 @@ ENV npm_config_unsafe_perm=true
 
 WORKDIR /tmp/node
 
-COPY package.json .
-
-RUN npm i
+COPY package*.json ./
+RUN npm ci
 
 FROM balenalib/%%BALENA_MACHINE_NAME%%-node:10-buster-build
 
