--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -6,7 +6,7 @@
 	],
     "worker/**/*.ts": [
         "prettier --config ./node_modules/resin-lint/config/.prettierrc --write",
-        "resin-lint --typescript --no-prettier",
+        "resin-lint --typescript",
         "git add"
     ]
 }
