--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
   "private": true,
   "devDependencies": {
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsdoc": "^20.0.5",
     "eslint-plugin-lodash": "^6.0.0",
+    "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
     "prettier": "^1.16.4",
