--- a/client/bin/multi-client.default.conf
+++ b/client/bin/multi-client.default.conf
@@ -1,10 +1,9 @@
 module.exports = {
     deviceType: '<device-type>',
-    suite: `<path-to-suite>`,
+    suite: `${__dirname}/../../suites/os`,
     config: {
-        networkWired: true,
+        networkWired: false,
         networkWireless: true,
-        workerType: 'testbot_hat',
         downloadType: 'local',
         interactiveTests: false,
         balenaApiKey: process.env.BALENA_CLOUD_API_KEY,
