Start using testbot SDK in leviathan
So we use the same logic we test with e2e tests of the SDK.

Change-type: minor
Signed-off-by: Roman Mazur <roman@balena.io>

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ build
 coverage
 .nyc*
 
+.balena/secrets/
+
 # Docker compose file is generated with make, as well as core/worker Dockerfile.
 core/Dockerfile
 worker/Dockerfile
