--- a/worker/Dockerfile.template
+++ b/worker/Dockerfile.template
@@ -19,7 +19,7 @@ RUN cd usbsdmux && \
   deactivate && \
   cd -
 
-FROM balenalib/%%BALENA_MACHINE_NAME%%-golang:1.12.4-buster-build AS go-build
+FROM balenalib/%%BALENA_MACHINE_NAME%%-golang:1.14-buster-build AS go-build
 
 RUN go get -u github.com/nadoo/glider
 
@@ -30,7 +30,7 @@ WORKDIR /tmp/node
 RUN install_packages libdbus-1-dev libvirt-dev python
 
 COPY package*.json ./
-RUN npm ci
+RUN res=0; ( cp /run/secrets/.npmrc $HOME && npm ci ) || res=1; rm $HOME/.npmrc; exit $res
 
 COPY tsconfig.json .
 COPY typings typings
