--- a/worker/package.json
+++ b/worker/package.json
@@ -16,6 +16,7 @@
 		"test:fast": "npm run build:test && mocha"
 	},
 	"dependencies": {
+		"@balena/testbot": "^1.1.0",
 		"@types/bluebird": "^3.5.25",
 		"@types/config": "0.0.34",
 		"async-mutex": "^0.1.3",
