--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
 		"balena-sdk": "^12.10.0",
 		"blessed": "^0.1.81",
 		"bluebird": "^3.5.3",
+		"bluebird-retry": "^0.11.0",
 		"config": "^3.2.2",
 		"fs-extra": "^8.1.0",
 		"lodash": "^4.17.11",
