--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "core/contracts"]
 	path = core/contracts
-	url = git@github.com:resin-io/contracts.git
+	url = https://github.com/balena-io/contracts.git
