--- a/core/Dockerfile.template
+++ b/core/Dockerfile.template
@@ -10,10 +10,11 @@ RUN npm ci
 FROM balenalib/%%BALENA_MACHINE_NAME%%-node:10-buster-build
 
 ENV UDEV=1
+ENV DBUS_SYSTEM_BUS_ADDRESS=unix:path=/host/run/dbus/system_bus_socket
 
 ENV npm_config_unsafe_perm=true
 
-RUN install_packages jq git vim rsync unzip
+RUN install_packages jq git vim rsync unzip bluez
 
 WORKDIR /usr/app
 
