re-enable hdmi capture if env variable set
Change-type: patch
Signed-off-by: Ryan Cooke <ryan@balena.io>

--- a/compose/balena.yml
+++ b/compose/balena.yml
@@ -11,6 +11,7 @@ services:
     network_mode: host
     volumes:
       - 'core-storage:/data'
+      - 'worker-storage:/worker'
       - 'reports-storage:/reports'
     labels:
       share: core-storage
