Replace suites with meta-balena submodule
Avoid having legacy suites directory and instead use
a pinned version from meta-balena for testing leviathan.

This also allows easy testing of meta-balena/tests by just
checking out a new working copy of the submodule from your
meta-balena branch.

This submodule does NOT need to remain up-to-date
since CI will usually handle that, but it's nice to have a recent
version of suites for new users.

Change-type: minor
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "core/contracts"]
 	path = core/contracts
 	url = https://github.com/balena-io/contracts.git
+[submodule "meta-balena"]
+	path = meta-balena
+	url = https://github.com/balena-os/meta-balena.git
