patch: Move generated docs to root for GitHub Pages
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipul@balena.io>

--- a/core/package.json
+++ b/core/package.json
@@ -3,7 +3,7 @@
 		"prettify": "prettier --config ../.prettierrc --write \"{lib,tests}/**/*.js\"",
 		"lint": "eslint -c ../.eslintrc.* lib tests",
 		"start": "node lib/main.js",
-		"docs": "rimraf docs/ && npx typedoc --tsconfig tsconfig.json"
+		"docs": "rimraf ../docs/ && npx typedoc --tsconfig tsconfig.json"
 	},
 	"dependencies": {
 		"ajv": "^6.5.0",
