--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -26,7 +26,7 @@
   "typedocOptions": {
     "name": "Leviathan Helpers",
     "entryPoints": ["lib/common", "lib/components"],
-    "out": "docs",
+    "out": "../docs/",
     "theme": "pages-plugin",
     "excludeExternals": true,
     "excludePrivate": true,
