generate mocha-style report at the end of tests
Change-type: patch
Signed-off-by: Ryan Cooke <ryan@balena.io>

--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,9 @@
 		"readable-stream": "^3.4.0",
 		"request": "^2.88.0",
 		"request-promise": "^4.2.4",
+		"stream-filter": "^2.1.0",
+		"tap-mocha-reporter": "^5.0.1",
+		"tap-spec": "^5.0.0",
 		"tar-fs": "^2.0.0",
 		"tar-stream": "^2.1.0",
 		"ws": "^7.1.2",
