--- a/suites/package.json
+++ b/suites/package.json
@@ -1,7 +1,7 @@
 {
 	"scripts": {
-		"prettify": "prettier --config ../.prettierrc --write \"{os,release}/**/*.js\"",
-		"lint": "eslint -c ../.eslintrc.* lib tests"
+		"prettify": "prettier --config ./.prettierrc --write \"./e2e/**/*.js\"",
+		"lint": "eslint --fix -c ./.eslintrc.* e2e"
 	},
 	"devDependencies": {
 		"eslint": "^4.19.1",
