compose: generic-x86: update for QemuWorker
Update generic-x86 compose file for use with QemuWorker. Including:

- Disable udev for core and worker, as NetworkManager isn't used
- Remove privileged flag for both containers in favor of capabilities
- Remove mapping in the host docker socket
- Add device mapping for /dev/kvm (hardware virtualization)
- Add device mapping for /dev/net/tun (network setup)
- Remove unneeded configuration disabling pid and ipc namespacing
- Specify WORKER_TYPE=qemu env var for worker container

Change-type: patch
Signed-off-by: Joseph Kogut <joseph@balena.io>

--- a/compose/generic-x86.yml
+++ b/compose/generic-x86.yml
@@ -1,26 +1,31 @@
 version: '2'
 volumes:
   core-storage:
-  worker-storage:
+  reports-storage:
 services:
   core:
-    privileged: true
     build: ./core
     network_mode: 'host'
     volumes:
       - 'core-storage:/data'
-      - '/var/run/docker.sock:/var/run/docker.sock'
-    labels:
-      share: 'core-storage'
+      - 'reports-storage:/reports'
+    environment:
+      - UDEV=0
   worker:
-    privileged: true
     build: 
       context: ./worker
       args:
         - SKIP_INSTALL_BINARY=true
-    pid: 'host'
+    devices:
+      - "/dev/net/tun:/dev/net/tun"
+      - "/dev/kvm:/dev/kvm"
+    cap_add:
+      - NET_ADMIN # allow network setup
+    build: ./worker
     network_mode: 'host'
-    ipc: 'host'
     volumes:
-      - '/var/run/dbus:/host/run/dbus:rw'
-      - 'worker-storage:/data'
+      - 'core-storage:/data'
+      - 'reports-storage:/reports'
+    environment:
+      - UDEV=0
+      - WORKER_TYPE=qemu
