--- a/worker/Dockerfile.template
+++ b/worker/Dockerfile.template
@@ -6,7 +6,7 @@ FROM balenalib/%%BALENA_ARCH%%-node:12-bullseye-20211015 AS node-build
 
 WORKDIR /tmp/node
 
-RUN install_packages libdbus-1-dev libvirt-dev python make build-essential
+RUN install_packages libusb-1.0.0-dev libdbus-1-dev libvirt-dev python make build-essential
 
 ARG SKIP_INSTALL_BINARY
 
@@ -26,7 +26,7 @@ ENV UDEV=1
 
 
 RUN install_packages \
-  libusb-dev libdbus-1-dev \
+  libusb-1.0.0-dev libdbus-1-dev \
   gstreamer1.0-tools gstreamer1.0-plugins-base gstreamer1.0-plugins-bad gstreamer1.0-plugins-good \
   qemu-system-x86 libvirt-daemon-system bridge-utils iproute2 dnsmasq iptables ebtables
 
