Make global config available to tests
Signed-off-by: Vipul Gupta (@vipulgupta2048) <vipul@balena.io>

--- a/core/package.json
+++ b/core/package.json
@@ -39,6 +39,7 @@
 		"ws": "^7.1.2"
 	},
 	"devDependencies": {
+		"@types/config": "0.0.39",
 		"eslint": "^4.19.1",
 		"eslint-config-prettier": "^4.0.0",
 		"eslint-config-standard": "^11.0.0",
