--- a/core/package.json
+++ b/core/package.json
@@ -12,6 +12,7 @@
 		"async-mutex": "^0.1.3",
 		"balena-sdk": "^11.0.0",
 		"balena-sync": "^10.0.0",
+		"@balena/leviathan-test-helpers": "0.0.2-ryan-first-commit-77742cc3dc2dac8f94ee5e2423e5d47c21ee7054",
 		"bluebird": "^3.5.1",
 		"bluebird-retry": "^0.11.0",
 		"config": "^3.2.2",
