stop testbotsdk build breaking local make
Change-type: patch
Signed-off-by: Ryan Cooke <ryan@balena.io>

--- a/compose/generic-x86.yml
+++ b/compose/generic-x86.yml
@@ -14,7 +14,10 @@ services:
       share: 'core-storage'
   worker:
     privileged: true
-    build: ./worker
+    build: 
+      context: ./worker
+      args:
+        - SKIP_INSTALL_BINARY=true
     pid: 'host'
     network_mode: 'host'
     ipc: 'host'
