add worker contract
Change-type: patch
Signed-off-by: Ryan Cooke <ryan@balena.io>

--- a/compose/balena.yml
+++ b/compose/balena.yml
@@ -28,3 +28,4 @@ services:
     labels:
       io.balena.features.dbus: '1'
       io.balena.features.balena-socket: '1'
+      io.balena.features.balena-api: '1'
