--- a/worker/package.json
+++ b/worker/package.json
@@ -20,6 +20,7 @@
 		"@types/bluebird": "^3.5.25",
 		"@types/config": "0.0.34",
 		"async-mutex": "^0.1.3",
+		"balena-sdk": "^15.54.2",
 		"bluebird": "^3.5.3",
 		"bluebird-retry": "^0.11.0",
 		"body-parser": "^1.18.3",
