--- a/core/package.json
+++ b/core/package.json
@@ -7,7 +7,7 @@
 	},
 	"dependencies": {
 		"ajv": "^6.5.0",
-		"ajv-semver": "git+https://github.com/balena-io-modules/ajv-semver.git#resin-semver",
+		"ajv-semver": "^1.0.4",
 		"any-promise": "^1.3.0",
 		"async-mutex": "^0.1.3",
 		"balena-sdk": "^11.0.0",
@@ -42,7 +42,7 @@
 		"eslint": "^4.19.1",
 		"eslint-config-prettier": "^4.0.0",
 		"eslint-config-standard": "^11.0.0",
-		"eslint-plugin-import": "^2.16.0",
+		"eslint-plugin-import": "^2.25.2",
 		"eslint-plugin-jsdoc": "^3.9.1",
 		"eslint-plugin-lodash": "^2.6.1",
 		"eslint-plugin-node": "^6.0.0",
@@ -53,6 +53,6 @@
 		"rimraf": "^3.0.2",
 		"typedoc": "^0.21.2",
 		"typedoc-plugin-pages-fork": "0.0.1",
-		"typescript": "^4.3.4"
+		"typescript": "^4.4.4"
 	}
 }
