--- a/worker/Dockerfile.template
+++ b/worker/Dockerfile.template
@@ -2,11 +2,11 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-golang:1.15-buster-build AS go-build
 
 RUN GO111MODULE=on go get -u github.com/nadoo/glider@v0.12.2
 
-FROM balenalib/%%BALENA_MACHINE_NAME%%-node:12-buster-build AS node-build
+FROM balenalib/%%BALENA_ARCH%%-node:12-bullseye-20211015 AS node-build
 
 WORKDIR /tmp/node
 
-RUN install_packages libdbus-1-dev libvirt-dev python
+RUN install_packages libdbus-1-dev libvirt-dev python make build-essential
 
 ARG SKIP_INSTALL_BINARY
 
@@ -20,7 +20,7 @@ COPY bin bin
 
 RUN npm run build
 
-FROM balenalib/%%BALENA_MACHINE_NAME%%-node:12-buster-run
+FROM balenalib/%%BALENA_ARCH%%-node:12-bullseye-20211015
 
 ENV UDEV=1
 
