--- a/core/Dockerfile.template
+++ b/core/Dockerfile.template
@@ -24,7 +24,11 @@ COPY --from=npm-install /tmp/node ./
 
 RUN install_packages python3 make build-essential openssh-client
 
-RUN npm install balena-cli@12.51.1 -g --production --unsafe-perm
+RUN curl -L https://github.com/balena-io/balena-cli/releases/download/v12.51.1/balena-cli-v12.51.1-linux-x64-standalone.zip -o balena-cli.zip \
+    && unzip balena-cli.zip \
+    && rm balena-cli.zip 
+
+ENV PATH="/usr/src/app/balena-cli/:${PATH}"
 
 COPY contracts contracts
 
