--- a/.github/workflows/balena-ci.yml
+++ b/.github/workflows/balena-ci.yml
@@ -7,14 +7,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        fail-fast: true
+        fleets: [testbot-rig, testbot-rig-beta, testbot-personal]
     steps:
       - uses: actions/checkout@v2
-
       - uses: balena-io/balena-ci@v0.3.2
         with:
           balena_token: ${{ secrets.BALENA_TOKEN }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          fleet: balena/testbot-rig
+          fleet: balena/${{ matrix.fleets }}
           versionbot: false
           environment: balena-cloud.com
           create_ref: true
