--- a/package.json
+++ b/package.json
@@ -9,36 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/balena-io/leviathan.git"
+    "url": "git+https://github.com/balena-os/leviathan.git"
   },
-  "author": "Theodor Gherzan <theodor@balena.io>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/balena-io/leviathan/issues"
+    "url": "https://github.com/balena-os/leviathan/issues"
   },
-  "homepage": "https://github.com/balena-io/leviathan",
+  "homepage": "https://github.com/balena-os/leviathan",
   "private": true,
-  "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jsdoc": "^20.0.5",
-    "eslint-plugin-lodash": "^6.0.0",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "husky": "^1.3.1",
-    "lint-staged": "^8.2.1",
-    "prettier": "^1.16.4",
-    "resin-lint": "^3.1.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "versionist": {
     "publishedAt": "2022-01-07T10:28:32.950Z"
   }
