core: add dependencies for hup suite
Change-type: patch
Signed-off-by: Ryan Cooke <ryan@balena.io>

--- a/compose/generic-x86.yml
+++ b/compose/generic-x86.yml
@@ -11,6 +11,7 @@ services:
       - 'reports-storage:/reports'
     environment:
       - UDEV=0
+      - WORKER_TYPE=qemu
   worker:
     build: 
       context: ./worker
