worker: listen on UNIX domain socket
Listen on UNIX domain socket instead of TCP socket. This simplifies
configuration and reduces network overhead, as routing isn't required.
The worker service is expected to run on the same machine as the core
service.

Change-type: patch
Signed-off-by: Joseph Kogut <joseph@balena.io>

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -2,6 +2,7 @@ version: '2'
 volumes:
   core-storage:
   reports-storage:
+  leviathan:
 services:
   core:
     build: ./core
@@ -9,10 +10,10 @@ services:
     volumes:
       - 'core-storage:/data'
       - 'reports-storage:/reports'
+      - 'leviathan:/run/leviathan'
     environment:
       - UDEV=0
       - WORKER_TYPE=qemu
-      - WORKER_PORT=${WORKER_PORT}
       - CORE_PORT=${CORE_PORT}
   worker:
     build: 
@@ -28,11 +29,11 @@ services:
     volumes:
       - 'core-storage:/data'
       - 'reports-storage:/reports'
+      - 'leviathan:/run/leviathan'
     environment:
       - UDEV=0
       - WORKER_TYPE=qemu
       - SCREEN_CAPTURE=true
-      - WORKER_PORT=${WORKER_PORT}
   client:
     build: ./client
     network_mode: host
