--- a/core/package.json
+++ b/core/package.json
@@ -10,6 +10,7 @@
 		"ajv-semver": "^1.0.4",
 		"any-promise": "^1.3.0",
 		"async-mutex": "^0.1.3",
+		"balena-cli": "^12.55.0",
 		"balena-sdk": "^11.0.0",
 		"bluebird": "^3.5.1",
 		"bluebird-retry": "^0.11.0",
