Rework the makefile and flatten compose files to root of project
We now have more useful make targets and don't rely on the bash
scripts in the root of the workspace.

We also have a slightly more reliable mechanism for making sure
a docker-compose binary is available.

Change-type: minor
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@ coverage
 # Docker compose file is generated with make, as well as core/worker Dockerfile.
 core/Dockerfile
 worker/Dockerfile
+
+# docker-compose script is downloaded via 'make local' if binary is not installed
+docker-compose
+
+# emulated balena build will install qemu binaries here
+**/.balena
+
+# custom paths for docker-compose bind mounts
+.env
