--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,31 @@
-./compose/balena.yml
+version: '2.1'
+volumes:
+  core-storage:
+  reports-storage:
+services:
+  core:
+    privileged: true
+    build:
+      context: ./core
+    network_mode: host
+    volumes:
+      - 'core-storage:/data'
+      - 'reports-storage:/reports'
+    labels:
+      share: core-storage
+      io.balena.features.balena-socket: '1'
+      io.balena.features.dbus: '1'
+  worker:
+    privileged: true
+    build:
+      context: ./worker
+    pid: host
+    network_mode: host
+    ipc: host
+    volumes:
+      - 'core-storage:/data'
+      - 'reports-storage:/reports'
+    labels:
+      io.balena.features.dbus: '1'
+      io.balena.features.balena-socket: '1'
+      io.balena.features.balena-api: '1'
