--- a/worker/Dockerfile.template
+++ b/worker/Dockerfile.template
@@ -1,8 +1,9 @@
-FROM balenalib/%%BALENA_ARCH%%-node:12-bullseye-20211015 AS node-build
+FROM balenalib/%%BALENA_ARCH%%-alpine-node:12.19.1-3.12-run-20201211 AS node-build
 
 WORKDIR /tmp/node
 
-RUN install_packages libusb-1.0.0-dev libdbus-1-dev python make build-essential git
+# hadolint ignore=DL3018
+RUN apk add --no-cache libusb-dev dbus-dev python3 make build-base git linux-headers
 
 ARG SKIP_INSTALL_BINARY
 
@@ -16,19 +17,17 @@ COPY bin bin
 
 RUN npm run build
 
-FROM balenalib/%%BALENA_ARCH%%-node:12-bullseye-20211015
+FROM balenalib/%%BALENA_ARCH%%-alpine-node:12.19.1-3.12-run-20201211
 
-ENV UDEV=1
+ENV UDEV 1
 
-RUN install_packages \
-  libusb-1.0.0-dev libdbus-1-dev \
-  gstreamer1.0-tools gstreamer1.0-plugins-base gstreamer1.0-plugins-bad gstreamer1.0-plugins-good \
-  qemu-system-x86 ovmf bridge-utils iproute2 dnsmasq iptables ebtables qemu-utils
-
-WORKDIR /usr/app
-
-COPY config config
-COPY entry.sh .
+# ovmf is only packaged for x86_64 and aarch64 so ignore failures on arm
+# hadolint ignore=DL3018
+RUN apk add --no-cache \
+  libusb-dev dbus-dev \
+  gstreamer-tools gst-plugins-base gst-plugins-bad gst-plugins-good \
+  bridge bridge-utils iproute2 dnsmasq iptables qemu-img qemu-system-x86_64 qemu-modules && \
+  (apk add --no-cache --repository http://dl-cdn.alpinelinux.org/alpine/v3.12/community ovmf || true)
 
 # create qemu-bridge-helper ACL file
 # https://wiki.qemu.org/Features/HelperNetworking
@@ -36,10 +35,13 @@ RUN mkdir -p /etc/qemu \
   && echo "allow all" > /etc/qemu/bridge.conf \
   && chmod 0640 /etc/qemu/bridge.conf
 
+WORKDIR /usr/app
+
+COPY config config
+COPY entry.sh .
+
 COPY --from=node-build /tmp/node/package.json .
 COPY --from=node-build /tmp/node/node_modules node_modules
 COPY --from=node-build /tmp/node/build build
-
-EXPOSE 2000
 
 CMD [ "./entry.sh" ]
