enable client to create parallel qemu workers
Change-type: patch
Signed-off-by: Ryan Cooke <ryan@balena.io>

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -12,7 +12,8 @@
     "sourceMap": true,
     "strictNullChecks": true,
     "strictBindCallApply": true,
-    "allowJs": true
+    "allowJs": true,
+    "skipLibCheck": true
   },
   "include": [
     "bin/**/*.*",
