--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,9 @@
 		"bluebird": "^3.5.3",
 		"bluebird-retry": "^0.11.0",
 		"config": "^3.2.2",
+		"dockerode": "^3.3.1",
 		"fs-extra": "^8.1.0",
+		"get-port": "^6.0.0",
 		"lodash": "^4.17.11",
 		"md5-file": "^4.0.0",
 		"mz": "^2.7.0",
@@ -36,7 +38,7 @@
 		"stream-filter": "^2.1.0",
 		"tap-mocha-reporter": "^5.0.1",
 		"tap-spec": "^5.0.0",
-		"tar-fs": "^2.0.0",
+		"tar-fs": "^2.1.1",
 		"tar-stream": "^2.1.0",
 		"ws": "^7.1.2",
 		"yargs": "^13.2.4"
@@ -46,7 +48,9 @@
 		"@babel/node": "^7.6.1",
 		"@babel/preset-env": "^7.6.0",
 		"@balena/lint": "^5.1.0",
+		"@types/dockerode": "^3.3.0",
 		"@types/jest": "^26.0.7",
+		"@types/tar-fs": "^2.0.1",
 		"eslint": "^4.19.1",
 		"eslint-config-prettier": "^4.0.0",
 		"eslint-config-standard": "^11.0.0",
