compose: remove host mode networking
With the switch to UNIX domain socket communication between the core and
worker services, we no longer need host mode networking. Remove it.

Change-type: patch
Signed-off-by: Joseph Kogut <joseph@balena.io>

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -6,7 +6,8 @@ volumes:
 services:
   core:
     build: ./core
-    network_mode: 'host'
+    ports:
+      - "80:80"
     volumes:
       - 'core-storage:/data'
       - 'reports-storage:/reports'
