--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,8 @@
 		"bluebird-retry": "^0.11.0",
 		"config": "^3.2.2",
 		"dockerode": "^3.3.1",
+		"find-free-port": "^2.0.0",
 		"fs-extra": "^8.1.0",
-		"get-port": "^6.0.0",
 		"lodash": "^4.17.11",
 		"md5-file": "^4.0.0",
 		"mz": "^2.7.0",
