--- a/worker/Dockerfile.template
+++ b/worker/Dockerfile.template
@@ -23,7 +23,7 @@ ENV UDEV=1
 RUN install_packages \
   libusb-1.0.0-dev libdbus-1-dev \
   gstreamer1.0-tools gstreamer1.0-plugins-base gstreamer1.0-plugins-bad gstreamer1.0-plugins-good \
-  qemu-system-x86 ovmf bridge-utils iproute2 dnsmasq iptables ebtables qemu-utils
+  qemu-system-x86 ovmf bridge-utils iproute2 dnsmasq iptables ebtables qemu-utils nmap
 
 WORKDIR /usr/app
 
