--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
 		"dockerode": "^3.3.1",
 		"find-free-port": "^2.0.0",
 		"fs-extra": "^8.1.0",
+		"glob": "^7.2.0",
 		"lodash": "^4.17.11",
 		"md5-file": "^4.0.0",
 		"mz": "^2.7.0",
